# license_plates_reader

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post_instal.sh
src/: main.py
